Fix alignment issue

--- a/static/css/style.less
+++ b/static/css/style.less
@@ -342,7 +342,6 @@ body {
                 margin: 0;
                 padding-left: 1em;
             }
-            p { margin-left: 1.506em; }
         }
     }
     .regular-events {
